<resources>
        <string name="app_name">Primjer1</string>
        <string name="bDestroyHumansText">Destroy all humans</string>
        <string name="bRestoreAllHumansText">Restore all humans</string>
        <string name="bIgnoreAllHumansText">Ignore all humans</string>
        <string name="tvHeaderMessageText">What should I do?</string>
        <string name="Number">Number Text</string>
</resources>