<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tvHeaderMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tvHeaderMessageText"/>
    <Button
        android:id="@+id/bDestroyAllHumans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bDestroyHumansText"/>
    <Button
        android:id="@+id/bRestoreAllHumans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bRestoreAllHumansText"/>
    <Button
        android:id="@+id/bIgnoreAllHumans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bIgnoreAllHumansText"
        android:onClick="customOnClick"/>

    <EditText
        android:id="@+id/Number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/Number"
        android:inputType="number"
        android:visibility="visible"
        tools:visibility="visible" />
</LinearLayout>
